--- a/contacts.html
+++ b/contacts.html
@@ -93,34 +93,33 @@
 		<footer class="footer">
 			<div class="container">
 				<div class="row">
-					<div class="col-xl-6 col-lg-5">
+					<div class="col-lg-2">
 						<a href="#" class="footer__logo">
-							<img src="img/logo2.svg" alt="alt">
+							<img src="img/logo4.svg" alt="alt">
 						</a>
 					</div>
-					<div class="col-lg-2 col-4">
+					<div class="col-lg-5">
 						<ul class="footer__nav">
-							<li><a href="#">О нас</a></li>
+							<li><a href="#">бюро 82</a></li>
 							<li><a href="#">Проекты</a></li>
 							<li><a href="#">Услуги</a></li>
-							<li><a href="#">Новости</a></li>
 							<li><a href="#">Контакты</a></li>
 						</ul>
 					</div>
-					<div class="col-xl-3 col-lg-4 col-8">
-						<div class="footer__contact">
-							<p>г. Симферополь,</p>
-							<p>ул. Севастопольская, 31А</p>
+					<div class="col-lg-5">
+						<div class="footer__right">
+							<div class="footer__contact">
+								<p>г. Симферополь,</p>
+								<p>ул. Севастопольская, 31А</p>
+							</div>
+							<div class="footer__contact">
+								<p><a href="tel:+79781234567">+7 (978) 123-45-67</a></p>
+								<p><a href="mailto:hello@buro82.ru">hello@buro82.ru</a></p>
+							</div>
+							<ul class="list-socials">
+								<li><a href="#" target="_blank"><img src="img/inst.svg" alt="alt"></a></li>
+							</ul>
 						</div>
-						<div class="footer__contact">
-							<p><a href="tel:+79781234567">+7 (978) 123-45-67</a></p>
-							<p><a href="mailto:hello@buro82.ru">hello@buro82.ru</a></p>
-						</div>
-					</div>
-					<div class="col-lg-1">
-						<ul class="list-socials">
-							<li><a href="#" target="_blank"><img src="img/inst.svg" alt="alt"></a></li>
-						</ul>
 					</div>
 				</div>
 			</div>
@@ -172,9 +171,9 @@
 				iconLayout: 'default#image',
 				iconImageHref: 'img/pin.svg',
 				hideIconOnBalloonOpen: false,
-				iconImageSize: [78, 86],
-				iconImageOffset: [-40, -86],
-				balloonOffset: [ 40, -86 ]
+				iconImageSize: [50, 56],
+				iconImageOffset: [-25, -56],
+				balloonOffset: [ 25, -56 ]
 			});
 
 
