--- a/services.html
+++ b/services.html
@@ -16,8 +16,8 @@
 	<link rel="stylesheet" href="libs/fancybox-master/dist/jquery.fancybox.min.css" />
 	<link rel="stylesheet" href="libs/swiper/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="css/fonts.css" />
-	<link rel="stylesheet" href="css/main.css?ver=1.2" />
-	<link rel="stylesheet" href="css/media.css?ver=1.2" />
+	<link rel="stylesheet" href="css/main.css?ver=1.3" />
+	<link rel="stylesheet" href="css/media.css?ver=1.3" />
 </head>
 <body>
 
@@ -69,126 +69,126 @@
 				</ul>
 				<h1 class="title-section">Генеральное проектирование</h1>
 				<div class="descr-section">Мы всегда остаемся в рамках согласованного бюджета и открыты к идеям заказчика</div>
-				<div class="swiper swiper-card">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<div class="content-slide">
-								<div class="row align-items-center">
-									<div class="col-md-6 col-5">
-										<div class="title-small">ПРОЕКТНАЯ ДОКУМЕНТАЦИЯ, РАЗДЕЛЫ: <br>ПЗ, ПЗУ, АР, КР, ИОС</div>
-										<div class="text-slide">
-											<p>Стадия П разрабатывается для определения основных решений, сметной стоимости объекта, объемов работ и используемых при строительстве материалах, конструкциях, оборудовании. Условием для работы над проектной документацией является наличие задания на проектирование и исходно-разрешительной документации; в свою очередь, стадия П служит основой для рабочей документации (стадии РД). Согласование в государственных органах производится на основании проектной документации.</p>
-										</div>
-									</div>
-									<div class="col-md-6 col-7">
-										<div class="image-slide">
-											<img src="img/service1.jpg" alt="alt">
-										</div>
+			</div>
+			<div class="swiper swiper-card">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide">
+						<div class="content-slide">
+							<div class="row align-items-center">
+								<div class="col-md-6 col-5">
+									<div class="title-small">ПРОЕКТНАЯ ДОКУМЕНТАЦИЯ, РАЗДЕЛЫ: <br>ПЗ, ПЗУ, АР, КР, ИОС</div>
+									<div class="text-slide">
+										<p>Стадия П разрабатывается для определения основных решений, сметной стоимости объекта, объемов работ и используемых при строительстве материалах, конструкциях, оборудовании. Условием для работы над проектной документацией является наличие задания на проектирование и исходно-разрешительной документации; в свою очередь, стадия П служит основой для рабочей документации (стадии РД). Согласование в государственных органах производится на основании проектной документации.</p>
 									</div>
 								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="content-slide">
-								<div class="row align-items-center">
-									<div class="col-md-6 col-5">
-										<div class="title-small">ПРОЕКТНАЯ ДОКУМЕНТАЦИЯ, РАЗДЕЛЫ: <br>ПЗ, ПЗУ, АР, КР, ИОС</div>
-										<div class="text-slide">
-											<p>Стадия П разрабатывается для определения основных решений, сметной стоимости объекта, объемов работ и используемых при строительстве материалах, конструкциях, оборудовании. Условием для работы над проектной документацией является наличие задания на проектирование и исходно-разрешительной документации; в свою очередь, стадия П служит основой для рабочей документации (стадии РД). Согласование в государственных органах производится на основании проектной документации.</p>
-										</div>
-									</div>
-									<div class="col-md-6 col-7">
-										<div class="image-slide">
-											<img src="img/service1.jpg" alt="alt">
-										</div>
+								<div class="col-md-6 col-7">
+									<div class="image-slide">
+										<img src="img/service1.jpg" alt="alt">
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="btn-swipe swiper-button-prev"></div>
-					<div class="btn-swipe swiper-button-next"></div>
-				</div>
-				<div class="swiper swiper-card">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<div class="content-slide">
-								<div class="row align-items-center">
-									<div class="col-md-6 col-5">
-										<div class="title-small">ПРОЕКТНАЯ ДОКУМЕНТАЦИЯ, РАЗДЕЛЫ: <br>ПЗ, ПЗУ, АР, КР, ИОС</div>
-										<div class="text-slide">
-											<p>Стадия П разрабатывается для определения основных решений, сметной стоимости объекта, объемов работ и используемых при строительстве материалах, конструкциях, оборудовании. Условием для работы над проектной документацией является наличие задания на проектирование и исходно-разрешительной документации; в свою очередь, стадия П служит основой для рабочей документации (стадии РД). Согласование в государственных органах производится на основании проектной документации.</p>
-										</div>
-									</div>
-									<div class="col-md-6 col-7">
-										<div class="image-slide">
-											<img src="img/service1.jpg" alt="alt">
-										</div>
+					<div class="swiper-slide">
+						<div class="content-slide">
+							<div class="row align-items-center">
+								<div class="col-md-6 col-5">
+									<div class="title-small">ПРОЕКТНАЯ ДОКУМЕНТАЦИЯ, РАЗДЕЛЫ: <br>ПЗ, ПЗУ, АР, КР, ИОС</div>
+									<div class="text-slide">
+										<p>Стадия П разрабатывается для определения основных решений, сметной стоимости объекта, объемов работ и используемых при строительстве материалах, конструкциях, оборудовании. Условием для работы над проектной документацией является наличие задания на проектирование и исходно-разрешительной документации; в свою очередь, стадия П служит основой для рабочей документации (стадии РД). Согласование в государственных органах производится на основании проектной документации.</p>
 									</div>
 								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="content-slide">
-								<div class="row align-items-center">
-									<div class="col-md-6 col-5">
-										<div class="title-small">ПРОЕКТНАЯ ДОКУМЕНТАЦИЯ, РАЗДЕЛЫ: <br>ПЗ, ПЗУ, АР, КР, ИОС</div>
-										<div class="text-slide">
-											<p>Стадия П разрабатывается для определения основных решений, сметной стоимости объекта, объемов работ и используемых при строительстве материалах, конструкциях, оборудовании. Условием для работы над проектной документацией является наличие задания на проектирование и исходно-разрешительной документации; в свою очередь, стадия П служит основой для рабочей документации (стадии РД). Согласование в государственных органах производится на основании проектной документации.</p>
-										</div>
-									</div>
-									<div class="col-md-6 col-7">
-										<div class="image-slide">
-											<img src="img/service1.jpg" alt="alt">
-										</div>
+								<div class="col-md-6 col-7">
+									<div class="image-slide">
+										<img src="img/service1.jpg" alt="alt">
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="btn-swipe swiper-button-prev"></div>
-					<div class="btn-swipe swiper-button-next"></div>
 				</div>
-				<div class="swiper swiper-card">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<div class="content-slide">
-								<div class="row align-items-center">
-									<div class="col-md-6 col-5">
-										<div class="title-small">ПРОЕКТНАЯ ДОКУМЕНТАЦИЯ, РАЗДЕЛЫ: <br>ПЗ, ПЗУ, АР, КР, ИОС</div>
-										<div class="text-slide">
-											<p>Стадия П разрабатывается для определения основных решений, сметной стоимости объекта, объемов работ и используемых при строительстве материалах, конструкциях, оборудовании. Условием для работы над проектной документацией является наличие задания на проектирование и исходно-разрешительной документации; в свою очередь, стадия П служит основой для рабочей документации (стадии РД). Согласование в государственных органах производится на основании проектной документации.</p>
-										</div>
-									</div>
-									<div class="col-md-6 col-7">
-										<div class="image-slide">
-											<img src="img/service1.jpg" alt="alt">
-										</div>
+				<div class="btn-swipe swiper-button-prev"></div>
+				<div class="btn-swipe swiper-button-next"></div>
+			</div>
+			<div class="swiper swiper-card">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide">
+						<div class="content-slide">
+							<div class="row align-items-center">
+								<div class="col-md-6 col-5">
+									<div class="title-small">ПРОЕКТНАЯ ДОКУМЕНТАЦИЯ, РАЗДЕЛЫ: <br>ПЗ, ПЗУ, АР, КР, ИОС</div>
+									<div class="text-slide">
+										<p>Стадия П разрабатывается для определения основных решений, сметной стоимости объекта, объемов работ и используемых при строительстве материалах, конструкциях, оборудовании. Условием для работы над проектной документацией является наличие задания на проектирование и исходно-разрешительной документации; в свою очередь, стадия П служит основой для рабочей документации (стадии РД). Согласование в государственных органах производится на основании проектной документации.</p>
 									</div>
 								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="content-slide">
-								<div class="row align-items-center">
-									<div class="col-md-6 col-5">
-										<div class="title-small">ПРОЕКТНАЯ ДОКУМЕНТАЦИЯ, РАЗДЕЛЫ: <br>ПЗ, ПЗУ, АР, КР, ИОС</div>
-										<div class="text-slide">
-											<p>Стадия П разрабатывается для определения основных решений, сметной стоимости объекта, объемов работ и используемых при строительстве материалах, конструкциях, оборудовании. Условием для работы над проектной документацией является наличие задания на проектирование и исходно-разрешительной документации; в свою очередь, стадия П служит основой для рабочей документации (стадии РД). Согласование в государственных органах производится на основании проектной документации.</p>
-										</div>
-									</div>
-									<div class="col-md-6 col-7">
-										<div class="image-slide">
-											<img src="img/service1.jpg" alt="alt">
-										</div>
+								<div class="col-md-6 col-7">
+									<div class="image-slide">
+										<img src="img/service1.jpg" alt="alt">
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="btn-swipe swiper-button-prev"></div>
-					<div class="btn-swipe swiper-button-next"></div>
+					<div class="swiper-slide">
+						<div class="content-slide">
+							<div class="row align-items-center">
+								<div class="col-md-6 col-5">
+									<div class="title-small">ПРОЕКТНАЯ ДОКУМЕНТАЦИЯ, РАЗДЕЛЫ: <br>ПЗ, ПЗУ, АР, КР, ИОС</div>
+									<div class="text-slide">
+										<p>Стадия П разрабатывается для определения основных решений, сметной стоимости объекта, объемов работ и используемых при строительстве материалах, конструкциях, оборудовании. Условием для работы над проектной документацией является наличие задания на проектирование и исходно-разрешительной документации; в свою очередь, стадия П служит основой для рабочей документации (стадии РД). Согласование в государственных органах производится на основании проектной документации.</p>
+									</div>
+								</div>
+								<div class="col-md-6 col-7">
+									<div class="image-slide">
+										<img src="img/service1.jpg" alt="alt">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
+				<div class="btn-swipe swiper-button-prev"></div>
+				<div class="btn-swipe swiper-button-next"></div>
+			</div>
+			<div class="swiper swiper-card">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide">
+						<div class="content-slide">
+							<div class="row align-items-center">
+								<div class="col-md-6 col-5">
+									<div class="title-small">ПРОЕКТНАЯ ДОКУМЕНТАЦИЯ, РАЗДЕЛЫ: <br>ПЗ, ПЗУ, АР, КР, ИОС</div>
+									<div class="text-slide">
+										<p>Стадия П разрабатывается для определения основных решений, сметной стоимости объекта, объемов работ и используемых при строительстве материалах, конструкциях, оборудовании. Условием для работы над проектной документацией является наличие задания на проектирование и исходно-разрешительной документации; в свою очередь, стадия П служит основой для рабочей документации (стадии РД). Согласование в государственных органах производится на основании проектной документации.</p>
+									</div>
+								</div>
+								<div class="col-md-6 col-7">
+									<div class="image-slide">
+										<img src="img/service1.jpg" alt="alt">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="content-slide">
+							<div class="row align-items-center">
+								<div class="col-md-6 col-5">
+									<div class="title-small">ПРОЕКТНАЯ ДОКУМЕНТАЦИЯ, РАЗДЕЛЫ: <br>ПЗ, ПЗУ, АР, КР, ИОС</div>
+									<div class="text-slide">
+										<p>Стадия П разрабатывается для определения основных решений, сметной стоимости объекта, объемов работ и используемых при строительстве материалах, конструкциях, оборудовании. Условием для работы над проектной документацией является наличие задания на проектирование и исходно-разрешительной документации; в свою очередь, стадия П служит основой для рабочей документации (стадии РД). Согласование в государственных органах производится на основании проектной документации.</p>
+									</div>
+								</div>
+								<div class="col-md-6 col-7">
+									<div class="image-slide">
+										<img src="img/service1.jpg" alt="alt">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="btn-swipe swiper-button-prev"></div>
+				<div class="btn-swipe swiper-button-next"></div>
 			</div>
 		</section>
 
@@ -243,34 +243,33 @@
 		<footer class="footer">
 			<div class="container">
 				<div class="row">
-					<div class="col-xl-6 col-lg-5">
+					<div class="col-lg-2">
 						<a href="#" class="footer__logo">
-							<img src="img/logo2.svg" alt="alt">
+							<img src="img/logo4.svg" alt="alt">
 						</a>
 					</div>
-					<div class="col-lg-2 col-4">
+					<div class="col-lg-5">
 						<ul class="footer__nav">
-							<li><a href="#">О нас</a></li>
+							<li><a href="#">бюро 82</a></li>
 							<li><a href="#">Проекты</a></li>
 							<li><a href="#">Услуги</a></li>
-							<li><a href="#">Новости</a></li>
 							<li><a href="#">Контакты</a></li>
 						</ul>
 					</div>
-					<div class="col-xl-3 col-lg-4 col-8">
-						<div class="footer__contact">
-							<p>г. Симферополь,</p>
-							<p>ул. Севастопольская, 31А</p>
+					<div class="col-lg-5">
+						<div class="footer__right">
+							<div class="footer__contact">
+								<p>г. Симферополь,</p>
+								<p>ул. Севастопольская, 31А</p>
+							</div>
+							<div class="footer__contact">
+								<p><a href="tel:+79781234567">+7 (978) 123-45-67</a></p>
+								<p><a href="mailto:hello@buro82.ru">hello@buro82.ru</a></p>
+							</div>
+							<ul class="list-socials">
+								<li><a href="#" target="_blank"><img src="img/inst.svg" alt="alt"></a></li>
+							</ul>
 						</div>
-						<div class="footer__contact">
-							<p><a href="tel:+79781234567">+7 (978) 123-45-67</a></p>
-							<p><a href="mailto:hello@buro82.ru">hello@buro82.ru</a></p>
-						</div>
-					</div>
-					<div class="col-lg-1">
-						<ul class="list-socials">
-							<li><a href="#" target="_blank"><img src="img/inst.svg" alt="alt"></a></li>
-						</ul>
 					</div>
 				</div>
 			</div>
@@ -305,7 +304,7 @@
 	<script src="libs/slick-1.5.9/slick/slick.min.js"></script>
 	<script src="libs/mask/jquery.maskedinput.js"></script>
 	<script src="libs/swiper/swiper-bundle.min.js"></script>
-	<script src="js/common.js?ver=1.2"></script>
+	<script src="js/common.js?ver=1.3"></script>
 	<!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
 	<!-- Google Analytics counter --><!-- /Google Analytics counter -->
 </body>
