--- a/team.html
+++ b/team.html
@@ -16,8 +16,8 @@
 	<link rel="stylesheet" href="libs/fancybox-master/dist/jquery.fancybox.min.css" />
 	<link rel="stylesheet" href="libs/swiper/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="css/fonts.css" />
-	<link rel="stylesheet" href="css/main.css?ver=1.2" />
-	<link rel="stylesheet" href="css/media.css?ver=1.2" />
+	<link rel="stylesheet" href="css/main.css?ver=1.3" />
+	<link rel="stylesheet" href="css/media.css?ver=1.3" />
 </head>
 <body>
 
@@ -62,6 +62,52 @@
 						</div>
 						<div class="col-lg-5">
 							<div class="text-page">Мы ищем дополнительные возможности на пресечении интересов, талантов, потребностей. Мы умеем сделать так, чтобы 1+1 было равно 11</div>
+						</div>
+					</div>
+				</div>
+				<h2 class="title-main">Мы создаём ментально и концептуально целостные проекты, активно развивающие нас и окружающую среду</h2>
+				<h2 class="title-section">основатели</h2>
+				<div class="row row_team">
+					<div class="col-lg-6">
+						<div class="item-team">
+							<div class="row align-items-center">
+								<div class="col-md-6">
+									<div class="item-team__image">
+										<img src="img/team1.jpg" alt="alt">
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="item-team__title">Александр Симоненко</div>
+									<div class="item-team__descr">Основатель и руководитель Архитектурной мастерской «Бюро 82»</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-6">
+						<div class="item-team">
+							<div class="row align-items-center">
+								<div class="col-md-6">
+									<div class="item-team__image">
+										<img src="img/team1.jpg" alt="alt">
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="item-team__title">Александр Симоненко</div>
+									<div class="item-team__descr">Основатель и руководитель Архитектурной мастерской «Бюро 82»</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="history-about">
+					<div class="row">
+						<div class="col-lg-5">
+							<h2 class="title-section">наша легенда</h2>
+						</div>
+						<div class="col-xl-5 col-lg-6">
+							<h3 class="title-text">Эмоциональная, творческая Инь и рациональный, уравновешенный Ян. Именно в точках соприкосновения разных интересов можно находить колоссальные возможности для роста</h3>
+							<p>Мы основали компанию вдвоём. Архитектор и строитель. К моменту основания каждый из нас преуспел в своём деле, но хотел большего. Делать действительно крутые, амбициозные проекты, которые смогут спускаться с «бумаги» в реальность. Воплощаться согласно замыслу автора и действительно развивать города.  </p>
+							<p>Что для этого нужно?  <br>Не просто команда профессионалов. Нужна «связка» людей, мыслящих в одном направлении. Именно в этом наша сила. Мы объединили наши разные компетенции одними ценностями и создали «dream team».</p>
 						</div>
 					</div>
 				</div>
@@ -269,34 +315,33 @@
 		<footer class="footer">
 			<div class="container">
 				<div class="row">
-					<div class="col-xl-6 col-lg-5">
+					<div class="col-lg-2">
 						<a href="#" class="footer__logo">
-							<img src="img/logo2.svg" alt="alt">
+							<img src="img/logo4.svg" alt="alt">
 						</a>
 					</div>
-					<div class="col-lg-2 col-4">
+					<div class="col-lg-5">
 						<ul class="footer__nav">
-							<li><a href="#">О нас</a></li>
+							<li><a href="#">бюро 82</a></li>
 							<li><a href="#">Проекты</a></li>
 							<li><a href="#">Услуги</a></li>
-							<li><a href="#">Новости</a></li>
 							<li><a href="#">Контакты</a></li>
 						</ul>
 					</div>
-					<div class="col-xl-3 col-lg-4 col-8">
-						<div class="footer__contact">
-							<p>г. Симферополь,</p>
-							<p>ул. Севастопольская, 31А</p>
+					<div class="col-lg-5">
+						<div class="footer__right">
+							<div class="footer__contact">
+								<p>г. Симферополь,</p>
+								<p>ул. Севастопольская, 31А</p>
+							</div>
+							<div class="footer__contact">
+								<p><a href="tel:+79781234567">+7 (978) 123-45-67</a></p>
+								<p><a href="mailto:hello@buro82.ru">hello@buro82.ru</a></p>
+							</div>
+							<ul class="list-socials">
+								<li><a href="#" target="_blank"><img src="img/inst.svg" alt="alt"></a></li>
+							</ul>
 						</div>
-						<div class="footer__contact">
-							<p><a href="tel:+79781234567">+7 (978) 123-45-67</a></p>
-							<p><a href="mailto:hello@buro82.ru">hello@buro82.ru</a></p>
-						</div>
-					</div>
-					<div class="col-lg-1">
-						<ul class="list-socials">
-							<li><a href="#" target="_blank"><img src="img/inst.svg" alt="alt"></a></li>
-						</ul>
 					</div>
 				</div>
 			</div>
@@ -331,7 +376,7 @@
 	<script src="libs/slick-1.5.9/slick/slick.min.js"></script>
 	<script src="libs/mask/jquery.maskedinput.js"></script>
 	<script src="libs/swiper/swiper-bundle.min.js"></script>
-	<script src="js/common.js?ver=1.2"></script>
+	<script src="js/common.js?ver=1.3"></script>
 	<!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
 	<!-- Google Analytics counter --><!-- /Google Analytics counter -->
 </body>
