--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	<link rel="stylesheet" href="libs/slick-1.5.9/slick/slick.css" />
 	<link rel="stylesheet" href="libs/slick-1.5.9/slick/slick-theme.css" />
 	<link rel="stylesheet" href="css/fonts.css" />
-	<link rel="stylesheet" href="css/main.css?ver=1.1" />
-	<link rel="stylesheet" href="css/media.css?ver=1.1" />
+	<link rel="stylesheet" href="css/main.css?ver=1.3" />
+	<link rel="stylesheet" href="css/media.css?ver=1.3" />
 </head>
 <body>
 
@@ -48,6 +48,7 @@
 			</div>
 			<div class="contacts-footer">
 				<p><a href="tel:+79781234567">+7 (978) 123 45 67</a></p>
+				<p><a href="tel:+79781234567">+7 (978) 123 45 67</a></p>
 				<p><a href="mailto:hello@buro82.ru">hello@buro82.ru</a></p>
 				<p><a href="#">Скачать презентацию</a></p>
 			</div>
@@ -66,7 +67,7 @@
 	<script src="libs/fancybox-master/dist/jquery.fancybox.min.js"></script>
 	<script src="libs/slick-1.5.9/slick/slick.min.js"></script>
 	<script src="libs/mask/jquery.maskedinput.js"></script>
-	<script src="js/common.js?ver=1.1"></script>
+	<script src="js/common.js?ver=1.3"></script>
 	<!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
 	<!-- Google Analytics counter --><!-- /Google Analytics counter -->
 </body>
